--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -47,6 +47,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
@@ -57,6 +58,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Gamepad_RightShoulder)
++AxisMappings=(AxisName="Vertical Movement",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Vertical Movement",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Vertical Movement",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Horizontal Movement",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Horizontal Movement",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Horizontal Movement",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
