AI movement is improved. Working on aim now, not working how it should

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=164A2B6848ECA906180BF48BC4BCB000
+CopyrightNotice=Copyright Marcos Espinosa
+
